force-app/main/default/objects/Account/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Pulled from the field Errors on Website Performance most recent record.</description>
    <label>Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>