force-app/main/default/objects/Account/fields/Exclusivity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Notes__c</fullName>
    <label>Exclusivity Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>