force-app/main/default/objects/Account/fields/Expected_Hours_Label__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_Label__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; text( Expected_Hours_per_Day__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Hours Label</label>
    <type>Text</type>
</CustomField>