force-app/main/default/objects/Account/fields/Expected_Hours_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_per_Day__c</fullName>
    <label>Expected Hours per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>