force-app/main/default/objects/Account/fields/Expected_Hours_Per_Day_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_Per_Day_Formula__c</fullName>
    <formula>Program_Size__c*2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Hours Per Day (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>