force-app/main/default/objects/Account/fields/Expected_Hours_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_per_Month__c</fullName>
    <label>Expected Hours per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>