force-app/main/default/objects/Account/fields/Extra_Appts_Needed_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Extra_Appts_Needed_This_Month__c</fullName>
    <description>This shows the number of extra appointments needed this month beyond the standard appointment goals.</description>
    <formula>CEILING( Adjusted_Monthly_Appt_Goal__c - Monthly_Appt_Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This shows the number of extra appointments needed this month beyond the standard appointment goals.</inlineHelpText>
    <label>Extra Appts Needed This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>