force-app/main/default/objects/Account/fields/Facebook_Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ad_Spend__c</fullName>
    <label>PPC Ad Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>