force-app/main/default/objects/Account/fields/Facebook_Monthly_Post_Goal__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Monthly_Post_Goal__c</fullName>
    <label>Facebook Monthly Post Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>