force-app/main/default/objects/Account/fields/First_Day_of_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_Current_Month__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Day of Current Month</label>
    <type>Date</type>
</CustomField>