force-app/main/default/objects/Account/fields/First_Input_Delay__c.field-meta.xml
<CustomField>
    <fullName>First_Input_Delay__c</fullName>
    <description>Pulled from the field First Input Delay on Website Performance most recent record</description>
    <label>First Input Delay</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>