force-app/main/default/objects/Account/fields/First_of_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>First_of_Next_Month__c</fullName>
    <formula>IF(MONTH(TODAY())=12,DATE(YEAR(TODAY())+1,1,1), 
DATE(YEAR(TODAY()),MONTH(TODAY())+1,1))</formula>
    <label>First of Next Month</label>
    <type>Date</type>
</CustomField>