force-app/main/default/objects/Account/fields/First_Right_of_Refusal_Count__c.field-meta.xml
<CustomField>
    <fullName>First_Right_of_Refusal_Count__c</fullName>
    <label>First Right of Refusal Count</label>
    <summaryForeignKey>First_Right_of_Refusal__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>