force-app/main/default/objects/Account/fields/GA_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_Account_ID__c</fullName>
    <description>Google Analytics Account Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Google Analytics Account Id</inlineHelpText>
    <label>GA Account ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>