force-app/main/default/objects/Account/fields/GA_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GA_Account_Name__c</fullName>
    <label>GA Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>