force-app/main/default/objects/Account/fields/GA_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_Property_ID__c</fullName>
    <description>Google Analytics Property Id</description>
    <externalId>true</externalId>
    <inlineHelpText>Google Analytics Account Id</inlineHelpText>
    <label>GA Property ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>