force-app/main/default/objects/Account/fields/GA_View_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_View_ID__c</fullName>
    <description>Google Analytics View Id</description>
    <inlineHelpText>Google Analytics View Id</inlineHelpText>
    <label>GA View ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>