force-app/main/default/objects/Account/fields/Get_Website_Performance_Results__c.field-meta.xml
<CustomField>
    <fullName>Get_Website_Performance_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box triggers Workato to retrieve performance test results from the Performance Test URL.  This box is checked automatically by process builder one hour after Performance Test Started is updated.</inlineHelpText>
    <label>Get Website Performance Results</label>
    <type>Checkbox</type>
</CustomField>