force-app/main/default/objects/Account/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>This is the first day calls are being made.</description>
    <inlineHelpText>This is the first day calls are being made.</inlineHelpText>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>