force-app/main/default/objects/Account/fields/Google_Analytics_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Last_Updated__c</fullName>
    <description>Tracks when the workato recipe for google analytics was last completed.</description>
    <label>Google Analytics Last Updated</label>
    <type>Date</type>
</CustomField>