force-app/main/default/objects/Account/fields/Google_Data_Studio_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Data_Studio_URL__c</fullName>
    <label>Google Data Studio URL</label>
    <type>Url</type>
</CustomField>