force-app/main/default/objects/Account/fields/Google_Doc_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Doc_Link__c</fullName>
    <description>Pulled from the amc project</description>
    <label>Google Doc Link</label>
    <type>Url</type>
</CustomField>