force-app/main/default/objects/Account/fields/Google_Search_Domain__c.field-meta.xml
<CustomField>
    <fullName>Google_Search_Domain__c</fullName>
    <formula>Substitute(Website,&quot;://&quot;,&quot;%3A%2F%2F&quot;)+&quot;%2F&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Search Domain</label>
    <type>Text</type>
</CustomField>