force-app/main/default/objects/Account/fields/Graphic_Designer__c.field-meta.xml
<CustomField>
    <fullName>Graphic_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graphic Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts21ra</relationshipName>
    <type>Lookup</type>
</CustomField>