force-app/main/default/objects/Account/fields/GTMetrix_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>GTMetrix_Last_Updated__c</fullName>
    <description>Updated after workato recipe is completed.</description>
    <label>GTMetrix Last Updated</label>
    <type>Date</type>
</CustomField>