force-app/main/default/objects/Account/fields/Has_Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Has_Ad_Spend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ad Spend</label>
    <type>Checkbox</type>
</CustomField>