force-app/main/default/objects/Account/fields/High_Priority_Client__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Account</label>
    <type>Checkbox</type>
</CustomField>