force-app/main/default/objects/Account/fields/Hours_Allocated_to_Primary_BGMs__c.field-meta.xml
<CustomField>
    <fullName>Hours_Allocated_to_Primary_BGMs__c</fullName>
    <inlineHelpText>This sums up the hours assigned to primary SDR.</inlineHelpText>
    <label>Hours Allocated to Primary SDRs</label>
    <summarizedField>BGM_Team__c.BGM_Hours_per_day__c</summarizedField>
    <summaryFilterItems>
        <field>BGM_Team__c.ResponsibilityLevel__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>BGM_Team__c.Is_Next_Month_Rollup_Helper__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>BGM_Team__c.Account_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>