force-app/main/default/objects/Account/fields/Hours_Alloted_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Hours_Alloted_Per_Month__c</fullName>
    <description>Hours allotted for Virtual Salesforce Management</description>
    <label>VSM Hours Allotted Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>