force-app/main/default/objects/Account/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AMG &amp; Sapper: Implementation Project Manager</description>
    <inlineHelpText>AMG &amp; Sapper: Implementation Project Manager</inlineHelpText>
    <label>Implementation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>