force-app/main/default/objects/Account/fields/Implementation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Notes__c</fullName>
    <description>Notes from Day one of Implementation as well as Sales Person Notes</description>
    <inlineHelpText>Notes from Day one of Implementation as well as Sales Person Notes</inlineHelpText>
    <label>Implementation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>