force-app/main/default/objects/Account/fields/Implementation_Packet_URL__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Packet_URL__c</fullName>
    <label>Implementation Packet URL</label>
    <type>Url</type>
</CustomField>