force-app/main/default/objects/Account/fields/Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date__c</fullName>
    <description>This is the first day that work is actually being done to start the implementation process.</description>
    <inlineHelpText>This is the first day that work is actually being done to start the implementation process.</inlineHelpText>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>