force-app/main/default/objects/Account/fields/Inbound_SDR_Pitch_Status__c.field-meta.xml
<CustomField>
    <fullName>Inbound_SDR_Pitch_Status__c</fullName>
    <label>Inbound SDR Pitch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Pitch</fullName>
            </value>
            <value>
                <fullName>Pitch No Show</fullName>
            </value>
            <value>
                <fullName>Pitch Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>