force-app/main/default/objects/Account/fields/Inflated_Goal_Value__c.field-meta.xml
<CustomField>
    <fullName>Inflated_Goal_Value__c</fullName>
    <description>Shows the number of appointments above the average per month to hit the guarantee.  For example, if a client has a yearly 60 appt goal, the standard goal is 5 per month.  If the goal is 6, this field will show a value of 1</description>
    <formula>Monthly_Appt_Goal__c - ROUND( Yearly_Appt_Goal__c / 12,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inflated Goal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>