force-app/main/default/objects/Account/fields/Inside_Costs__c.field-meta.xml
<CustomField>
    <fullName>Inside_Costs__c</fullName>
    <defaultValue>400</defaultValue>
    <label>Inside Costs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>