force-app/main/default/objects/Account/fields/Inside_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AMG: Partner Sales Manager ; Sapper: Sr Sales Development Rep</description>
    <inlineHelpText>AMG: Partner Sales Manager ; Sapper: Sr Sales Development Rep</inlineHelpText>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>