force-app/main/default/objects/Account/fields/Invoices_Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Past_Due_Amount__c</fullName>
    <description>This is the total amount due of any overdue unpaid invoices</description>
    <inlineHelpText>This is the total amount due of any overdue unpaid invoices</inlineHelpText>
    <label>Invoices Past Due Amount</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Paid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Past_Due_Invoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>