force-app/main/default/objects/Account/fields/Invoices_Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Total_Amount_Due__c</fullName>
    <description>This is the total amount due of any unpaid invoices</description>
    <inlineHelpText>This is the total amount due of any unpaid invoices</inlineHelpText>
    <label>Invoices Total Amount Due</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Paid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>