force-app/main/default/objects/Account/fields/Is_Same_PSR__c.field-meta.xml
<CustomField>
    <fullName>Is_Same_PSR__c</fullName>
    <formula>IF(NOT(ISNULL(Previous_PSR__c)) &amp;&amp; Current_PSR__c = Previous_PSR__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Same Delivery Owner?</label>
    <type>Checkbox</type>
</CustomField>