force-app/main/default/objects/Account/fields/Kickoff_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Meeting_Date__c</fullName>
    <label>Kickoff Meeting Date</label>
    <type>Date</type>
</CustomField>