force-app/main/default/objects/Account/fields/Landing_Page_Click_report__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Click_report__c</fullName>
    <label>Landing Page URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>