force-app/main/default/objects/Account/fields/Largest_Contentful_Paint__c.field-meta.xml
<CustomField>
    <fullName>Largest_Contentful_Paint__c</fullName>
    <description>Pulled from the field Largest Contenful Paint on Website Performance most recent record.</description>
    <label>Largest Contentful Paint</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>