force-app/main/default/objects/Account/fields/Last_Activity_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Datetime__c</fullName>
    <description>Notes the datetime of the most recently added activity.</description>
    <label>Last Activity Datetime</label>
    <type>DateTime</type>
</CustomField>