force-app/main/default/objects/Account/fields/Last_Billing_Contact_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Billing_Contact_Call__c</fullName>
    <label>Last Billing Contact Call</label>
    <type>DateTime</type>
</CustomField>