force-app/main/default/objects/Account/fields/Last_Date_Referral_Verified__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Referral_Verified__c</fullName>
    <description>What was the last date the Referral was verified</description>
    <label>Last Date Referral Verified</label>
    <type>Date</type>
</CustomField>