force-app/main/default/objects/Account/fields/Last_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Date__c</fullName>
    <description>This field is populated by the nightly Account Metric Batch process with the date of the most recent event with the record type &apos;Account Management Event&apos;</description>
    <inlineHelpText>This field is populated by the nightly Account Metric Batch process with the date of the most recent event with the record type &apos;Account Management Event&apos;</inlineHelpText>
    <label>Last Meeting Date</label>
    <type>Date</type>
</CustomField>