force-app/main/default/objects/Account/fields/Last_Month_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Billed_Amount__c</fullName>
    <label>Last Month Billed Amount</label>
    <summarizedField>Invoice__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Is_Last_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>