force-app/main/default/objects/Account/fields/Last_Payment_Issue_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Issue_Month__c</fullName>
    <label>Last Payment Issue Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>