force-app/main/default/objects/Account/fields/Last_Results_Meeting_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Results_Meeting_Completed_Date__c</fullName>
    <label>Last Results Meeting Completed Date</label>
    <summarizedField>Client_Meeting__c.Meeting_Held_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Client_Meeting__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Client_Meeting__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>