force-app/main/default/objects/Account/fields/Lifetime_TOC__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_TOC__c</fullName>
    <description>This is updated by the nightly Account Metric Batch process with a total count of contacts with a Dev Outcome of &apos;07 TOC Open&apos;

TOC Date not equal to Null – This will show all records submitted as a TOC lifetime</description>
    <inlineHelpText>This is updated by the nightly Account Metric Batch process with a total count of contacts with a Dev Outcome of &apos;07 TOC Open&apos;</inlineHelpText>
    <label>Lifetime TOC</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>