force-app/main/default/objects/Account/fields/LinkedIn_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Account_Id__c</fullName>
    <label>LinkedIn Account Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>