force-app/main/default/objects/Account/fields/LinkedIn_Connection_Request__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connection_Request__c</fullName>
    <inlineHelpText>LinkedIn Connections Since Contract Start</inlineHelpText>
    <label>LinkedIn Connections Since Contract Star</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>