force-app/main/default/objects/Account/fields/LinkedIn_Connection_Request_This_Month__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connection_Request_This_Month__c</fullName>
    <label>LinkedIn Connection Requests This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>