force-app/main/default/objects/Account/fields/LinkedIn_Connection_Requests_Accepted__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connection_Requests_Accepted__c</fullName>
    <description>LinkedIn Connection Requests Accepted Since Contract Starte</description>
    <label>LinkedIn Connection Requests Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>