force-app/main/default/objects/Account/fields/LinkedIn_Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connection_Status__c</fullName>
    <formula>TEXT(Project__r.LinkedIn_Login_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Connection Status</label>
    <type>Text</type>
</CustomField>