force-app/main/default/objects/Account/fields/LinkedIn_Credentials_Populated__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Credentials_Populated__c</fullName>
    <formula>Portal_Main_POC__r.Linkedin_Credentials_Populated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Credentials Populated</label>
    <type>Checkbox</type>
</CustomField>