force-app/main/default/objects/Account/fields/LinkedIn_Weekly_Post_Goal__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Weekly_Post_Goal__c</fullName>
    <label>LinkedIn Weekly Post Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>