force-app/main/default/objects/Account/fields/LinkedIn_Weekly_Report_Label__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Weekly_Report_Label__c</fullName>
    <formula>Name &amp; &quot;-&quot; &amp; text(LinkedIn_Weekly_Post_Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Weekly Report Label</label>
    <type>Text</type>
</CustomField>