force-app/main/default/objects/Account/fields/Logged_Hours_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Logged_Hours_This_Month__c</fullName>
    <description>This field is populated by the nightly Account Metric Batch process with a sum of the Total Session Hours on tasks within the current month with the &apos;Logging Hours&apos; record type</description>
    <inlineHelpText>This field is populated by the nightly Account Metric Batch process with a sum of the Total Session Hours on tasks within the current month with the &apos;Logging Hours&apos; record type</inlineHelpText>
    <label>Logged Hours This Month</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>