force-app/main/default/objects/Account/fields/Lost_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lost_Revenue__c</fullName>
    <formula>IF(AND(This_Month_Billed_Amount__c-Last_Month_Billed_Amount__c &lt; 0, Cancel_Date__c = NULL), This_Month_Billed_Amount__c-Last_Month_Billed_Amount__c,0)+

IF(Cancel_Date__c &lt;&gt; NULL, This_Month_Billed_Amount__c,0)+

IF(AND(This_Month_Billed_Amount__c=0, ISPICKVAL(Status__c , &quot;ACTIVE&quot;)), This_Month_Billed_Amount__c- Last_Month_Billed_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>