force-app/main/default/objects/Account/fields/Main_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Name__c</fullName>
    <label>Main Contact Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>