force-app/main/default/objects/Account/fields/Manager_Appts_Scored_Goal__c.field-meta.xml
<CustomField>
    <fullName>Manager_Appts_Scored_Goal__c</fullName>
    <description>Number of appointments quality checked by manager.</description>
    <formula>Program_Size__c *2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Appts Scored Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>