force-app/main/default/objects/Account/fields/Manager_Reviewed_Appts__c.field-meta.xml
<CustomField>
    <fullName>Manager_Reviewed_Appts__c</fullName>
    <description>Number of appointments quality reviewed by success manager</description>
    <label>Manager Reviewed Appts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>