force-app/main/default/objects/Account/fields/Marketing_Assets__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If box is checked client is receiving the marketing assets along with their program</description>
    <label>Marketing Collateral?</label>
    <type>Checkbox</type>
</CustomField>