force-app/main/default/objects/Account/fields/Marketing_Collateral_Cancel_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Cancel_Next_Month__c</fullName>
    <description>Track the marketing collateral manager&apos;s retention.
If the MC Cancel Date is &gt;=  the first day of the following month, mark the box True otherwise False

Formula Help: 
DATE( YEAR( TODAY() ), MONTH( TODAY() ) + 3, 1) returns the Date value of the first day three months from today in the current year</description>
    <formula>IF(
    Asset_Cancellation_Date__c &gt;= DATE(YEAR(ADDMONTHS(Today(),1)),MONTH(ADDMONTHS(TODAY(),1)),1)
    ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Collateral Cancel Next Month</label>
    <type>Checkbox</type>
</CustomField>