force-app/main/default/objects/Account/fields/Marketing_Collateral_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Collateral_Start_Date__c</fullName>
    <label>Marketing Collateral Start Date</label>
    <type>Date</type>
</CustomField>