force-app/main/default/objects/Account/fields/Marketing_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager_Notes__c</fullName>
    <description>Marketing Manager will update this section with every single communication or attempt to communicate with client</description>
    <inlineHelpText>Marketing Manager will update this section with every single communication or attempt to communicate with client</inlineHelpText>
    <label>Marketing Manager Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>