force-app/main/default/objects/Account/fields/Marketing_Service_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Service_Audit_Status__c</fullName>
    <label>Digital Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined in Implementation</fullName>
            </value>
            <value>
                <fullName>Scheduled in Implementation</fullName>
            </value>
            <value>
                <fullName>Client Exempt</fullName>
            </value>
            <value>
                <fullName>Current Client Pitched</fullName>
            </value>
            <value>
                <fullName>Current Client Declined Pitch</fullName>
            </value>
            <value>
                <fullName>Client Declined</fullName>
                <isActive>false</isActive>
                <label>Client Declined</label>
            </value>
            <value>
                <fullName>Pitch Completed</fullName>
                <isActive>false</isActive>
                <label>Pitch Completed</label>
            </value>
            <value>
                <fullName>Pitched in Implementation</fullName>
                <isActive>false</isActive>
                <label>Pitched in Implementation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>