force-app/main/default/objects/Account/fields/Marketing_Service_Audit_URL__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Service_Audit_URL__c</fullName>
    <label>Digital Audit URL</label>
    <type>Url</type>
</CustomField>