force-app/main/default/objects/Account/fields/Marketing_Services_Pitch_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Services_Pitch_Start_Date__c</fullName>
    <description>The date/time of the pitch. Required before changing &quot;Marketing Service Audit Status&quot; to &quot;Scheduled in Implementation&quot;</description>
    <inlineHelpText>The date/time of the pitch. Required before changing &quot;Marketing Service Audit Status&quot; to &quot;Scheduled in Implementation&quot;</inlineHelpText>
    <label>Inbound SDR Pitch Start Date</label>
    <type>DateTime</type>
</CustomField>